--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
 <body>
     <div class="produtos">
         <div class="produto">
-            <img class="produto-imagem" src="https://placehold.co/100x100">
-            <h4 class="produto-nome">Nome do produto</h4>
-            <p class="produto-descricao">
+            <img class="produto__imagem" src="https://placehold.co/100x100" alt="Nome do produto">
+            <h4 class="produto__nome">Nome do produto</h4>
+            <p class="produto__descricao">
                 Descrição do produto
             </p>
         </div>
-        <div class="produto em-destaque">
-            <img class="produto-imagem" src="https://placehold.co/100x100">
-            <h4 class="produto-nome">Nome do produto</h4>
-            <p class="produto-descricao">
+        <div class="produto produto--em-destaque">
+            <img class="produto__imagem" src="https://placehold.co/100x100" alt="Nome do produto em destaque">
+            <h4 class="produto__nome">Nome do produto</h4>
+            <p class="produto__descricao">
                 Descrição do produto
             </p>
         </div>
         <div class="produto">
-            <img class="produto-imagem" src="https://placehold.co/100x100">
-            <h4 class="produto-nome">Nome do produto</h4>
-            <p class="produto-descricao">
+            <img class="produto__imagem" src="https://placehold.co/100x100" alt="Nome do produto">
+            <h4 class="produto__nome">Nome do produto</h4>
+            <p class="produto__descricao">
                 Descrição do produto
             </p>
         </div>
     </div>
 </body>
+
 
 </html>
